--- a/src/aboutme.html
+++ b/src/aboutme.html
@@ -23,7 +23,7 @@
         <article>
             <h3>About me</h3>
             <p>I am Bezawit, a 21 year old Software Engineering student at Addis Ababa University.
-                I have developed a skill set in various programming languages and frameworks, including React, JavaScript, Nodejs,
+                I have developed a skill set in various programming languages and frameworks, including React, JavaScript, Nodejs,Nextjs
                 and CSS. These tools have allowed me to bring my ideas to life, building interactive and dynamic web applications.
                 I invite you to take a look at my <a href="./file/bezawit sebsbe.pdf" target="_blank">CV</a>, which details my skills and experiences.
             </p>
