--- a/src/home.html
+++ b/src/home.html
@@ -7,13 +7,20 @@
     <title>portfolio</title>
 
     <script src="https://kit.fontawesome.com/e6a7a4572e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/home.css"/>
 </head>
 
 <body>
-    <header>
-        <span>BEZAWIT.S</span>
-        <nav>
-            <ul>
+    
+    <header class="header">
+        <span class="logo">BEZAWIT.S</span>
+        <nav class="nav-wrapper">
+            <div class="menu-toggle" id="menu-icon">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="li-wrapper" id="nav-links">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="aboutme.html">About me</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -23,30 +30,39 @@
         </nav>
     </header>
     <main>
-        <div>
-            <p>Welcome to my portfolio! I am Bezawit Sebsbe, a dedicated Software Engineering student at Addis Ababa
+        <div class="image-container">
+            <img src="./images/image1.jpg" alt="photo of bezawit sebsbe" class="profile-image">
+        </div>
+        <div  class="text-container">
+            <h2 id="movingHeading">Welcome to my portfolio!</h2>
+            <p>I am Bezawit Sebsbe, a dedicated Software Engineering student at Addis Ababa
                 University,
                 passionate about creating innovative solutions through technology.</p>
-
+            <hr>
             <p>"The best way to predict the future is to invent it." — Alan Kay</p>
-
+            <hr>
         </div>
-        <div>
-            <img src="./images/image1.jpg" alt="photo of bezawit sebsbe">
-        </div>
+        
 
     </main>
-    <footer>
-        <div>&copy;2024 Bezawit Sebsbe. All rights reserved.</div>
+    <footer class="footer1">
+        <div class="footer">
+            <div class="copy" id="copyright">&copy;</div>
+            <div class="copy">2025 Bezawit Sebsbe. All rights reserved.</div>
+        </div>
         <diV>
-            <ul>
-                <li><a href="https://sebsbebezawit@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
-                <li><a href="https://github.com/bezawitsebsbe"><i class="fa-brands fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/bezawit-sebsbe-b5ba02331"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="https://leetcode.com/u/bezawitsebsbe/"><i class="fa-solid fa-code"></i></a></li>
+            <ul class="footer-wrapper">
+                <li><a href="https://sebsbebezawit@gmail.com"><img src="./images/gmail.49c66076.svg" alt="gmail"></a></li>
+                <li><a href="https://github.com/bezawitsebsbe"><img src="./images/github.feb228f9.svg" alt="github"></a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/bezawit-sebsbe-b5ba02331"><img src="./images/linkedin.c304a414.svg"
+                            alt="linkedin"></a></li>
+                <li><a href="https://leetcode.com/u/bezawitsebsbe/"><img src="./images/download.png" alt="leetcode"
+                            width="45" style="border-radius: 10px;"></a></li>
             </ul>
         </diV>
     </footer>
+    <script type="text/javascript" src="./js/home.js"></script>
 
 </body>
 
